[gd_scene load_steps=29 format=3 uid="uid://2pg12jbt41j8"]

[ext_resource type="Script" path="res://gui/auth.gd" id="1_llcwk"]
[ext_resource type="Texture2D" uid="uid://cbm56ixsja1w6" path="res://yay.png" id="2_fvsco"]
[ext_resource type="Script" path="res://gui/login.gd" id="2_i23jk"]
[ext_resource type="Script" path="res://gui/signup.gd" id="3_mxq21"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dd85"]
bg_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
border_color = Color(0.117647, 0.117647, 0.117647, 1)

[sub_resource type="Theme" id="Theme_l0c4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imff0"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0313726, 0.0313726, 0.0313726, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7esm"]
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvh0i"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0313726, 0.0313726, 0.0313726, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pncwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r7d4t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgvjc"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.152941, 0.152941, 0.152941, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
shadow_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_om6rf"]
bg_color = Color(1, 0.247059, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtw1x"]
bg_color = Color(0.870588, 0, 0, 1)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2eejk"]
bg_color = Color(1, 0.152941, 0.109804, 1)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jugec"]

[sub_resource type="Animation" id="Animation_pah8t"]
resource_name = "connection_error"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.301961, 0.235294, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(256, 128), Vector2(256, 138), Vector2(256, 118), Vector2(256, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Нет подключения к серверу"]
}

[sub_resource type="Animation" id="Animation_50jjh"]
resource_name = "error"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.301961, 0.235294, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(256, 128), Vector2(256, 138), Vector2(256, 118), Vector2(256, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Неизвестная ошибка"]
}

[sub_resource type="Animation" id="Animation_p5kp3"]
resource_name = "loading"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(256, 128), Vector2(256, 169), Vector2(256, 169), Vector2(256, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Добро пожаловать!", "Исследую сервер"]
}

[sub_resource type="Animation" id="Animation_jxslq"]
resource_name = "loading_dots"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Исследую сервер.", "Исследую сервер..", "Исследую сервер...", "Ищу данные о тебе"]
}

[sub_resource type="Animation" id="Animation_7n8nn"]
resource_name = "login"

[sub_resource type="Animation" id="Animation_6q0gh"]
resource_name = "login_completed"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(256, 128), Vector2(256, 169), Vector2(256, 169), Vector2(256, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(0.4, 1, 0.368627, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Авторизация прошла успешно!"]
}

[sub_resource type="Animation" id="Animation_gii21"]
resource_name = "reg_completed"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 0.172549, 0.12549, 1), Color(1, 0.352941, 0.192157, 1), Color(1, 1, 0, 1), Color(0.498039, 0.815686, 0, 1), Color(0, 0.772549, 0.964706, 1), Color(0, 0.341176, 0.537255, 1), Color(0.764706, 0.286275, 1, 1), Color(0.705882, 0.32549, 0.996078, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(256, 128), Vector2(256, 128), Vector2(256, 169), Vector2(256, 128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Регистрация пройдена! Хорошей игры!"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knofm"]
_data = {
"connection_error": SubResource("Animation_pah8t"),
"error": SubResource("Animation_50jjh"),
"loading": SubResource("Animation_p5kp3"),
"loading_dots": SubResource("Animation_jxslq"),
"login": SubResource("Animation_7n8nn"),
"login_completed": SubResource("Animation_6q0gh"),
"reg_completed": SubResource("Animation_gii21")
}

[sub_resource type="Animation" id="Animation_3033h"]
resource_name = "enable"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 768), Vector2(128, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_368c3"]
_data = {
"enable": SubResource("Animation_3033h")
}

[sub_resource type="Animation" id="Animation_xfgle"]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckv55"]
_data = {
"hide": SubResource("Animation_xfgle")
}

[node name="auth" type="Node2D"]
script = ExtResource("1_llcwk")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1dd85")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(552, -152)
scale = Vector2(69, 69)
emitting = false
amount = 13
lifetime = 1.4
speed_scale = 2.0
randomness = 0.11
texture = ExtResource("2_fvsco")
emission_shape = 3
emission_rect_extents = Vector2(10, 0)
direction = Vector2(0, 0)
spread = 180.0

[node name="SignUp" type="Button" parent="."]
offset_left = 448.0
offset_top = 328.0
offset_right = 704.0
offset_bottom = 376.0
theme = SubResource("Theme_l0c4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_imff0")
theme_override_styles/hover = SubResource("StyleBoxFlat_w7esm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xvh0i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pncwy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r7d4t")
toggle_mode = true
button_mask = 5
text = "Создать аккаунт"

[node name="LogIn" type="Button" parent="."]
offset_left = 448.0
offset_top = 264.0
offset_right = 704.0
offset_bottom = 312.0
theme_override_styles/normal = SubResource("StyleBoxFlat_imff0")
theme_override_styles/hover = SubResource("StyleBoxFlat_w7esm")
toggle_mode = true
text = "Войти"

[node name="LoginWindow" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 128.0
offset_top = 768.0
offset_right = 1024.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mgvjc")
script = ExtResource("2_i23jk")

[node name="close" type="Button" parent="LoginWindow"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 48.0
theme_override_styles/normal = SubResource("StyleBoxFlat_om6rf")
theme_override_styles/hover = SubResource("StyleBoxFlat_vtw1x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2eejk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jugec")

[node name="Nickname" type="LineEdit" parent="LoginWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 208.0
offset_right = 640.0
offset_bottom = 239.0
placeholder_text = "Nickname"

[node name="Password" type="LineEdit" parent="LoginWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 272.0
offset_right = 640.0
offset_bottom = 303.0
placeholder_text = "Password"
secret = true
secret_character = "*"

[node name="Login" type="Button" parent="LoginWindow"]
layout_mode = 0
offset_left = 320.0
offset_top = 344.0
offset_right = 576.0
offset_bottom = 376.0
text = "Войти в аккаунт"

[node name="Label" type="Label" parent="LoginWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 192.0
text = "Добро пожаловать!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoginWindow/Label"]
libraries = {
"": SubResource("AnimationLibrary_knofm")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoginWindow"]
libraries = {
"": SubResource("AnimationLibrary_368c3")
}

[node name="NicknameError" type="Label" parent="LoginWindow"]
layout_mode = 0
offset_left = 264.0
offset_top = 240.0
offset_right = 912.0
offset_bottom = 273.0

[node name="PasswordError" type="Label" parent="LoginWindow"]
layout_mode = 0
offset_left = 264.0
offset_top = 304.0
offset_right = 911.0
offset_bottom = 337.0

[node name="Timer" type="Timer" parent="LoginWindow"]

[node name="SignupWindow" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 128.0
offset_top = 768.0
offset_right = 1024.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mgvjc")
script = ExtResource("3_mxq21")

[node name="close" type="Button" parent="SignupWindow"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 48.0
theme_override_styles/normal = SubResource("StyleBoxFlat_om6rf")
theme_override_styles/hover = SubResource("StyleBoxFlat_vtw1x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2eejk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jugec")

[node name="Email" type="LineEdit" parent="SignupWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 208.0
offset_right = 640.0
offset_bottom = 239.0
placeholder_text = "Email"

[node name="Nickname" type="LineEdit" parent="SignupWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 336.0
offset_right = 640.0
offset_bottom = 367.0
placeholder_text = "Your name is..."

[node name="Password" type="LineEdit" parent="SignupWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 272.0
offset_right = 440.0
offset_bottom = 303.0
placeholder_text = "Password"
secret = true
secret_character = "*"

[node name="PasswordAgain" type="LineEdit" parent="SignupWindow"]
layout_mode = 0
offset_left = 456.0
offset_top = 272.0
offset_right = 640.0
offset_bottom = 303.0
placeholder_text = "Password again"
secret = true
secret_character = "*"

[node name="Login" type="Button" parent="SignupWindow"]
layout_mode = 0
offset_left = 320.0
offset_top = 400.0
offset_right = 576.0
offset_bottom = 432.0
text = "Создать аккаунт"

[node name="Label" type="Label" parent="SignupWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 192.0
text = "Добро пожаловать!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SignupWindow/Label"]
libraries = {
"": SubResource("AnimationLibrary_knofm")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SignupWindow"]
libraries = {
"": SubResource("AnimationLibrary_368c3")
}

[node name="NicknameError" type="Label" parent="SignupWindow"]
layout_mode = 0
offset_left = 264.0
offset_top = 368.0
offset_right = 912.0
offset_bottom = 401.0

[node name="PasswordError" type="Label" parent="SignupWindow"]
layout_mode = 0
offset_left = 256.0
offset_top = 304.0
offset_right = 640.0
offset_bottom = 337.0
horizontal_alignment = 1

[node name="EmailError" type="Label" parent="SignupWindow"]
layout_mode = 0
offset_left = 264.0
offset_top = 240.0
offset_right = 640.0
offset_bottom = 272.0

[node name="Timer" type="Timer" parent="SignupWindow"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ckv55")
}

[connection signal="button_down" from="SignUp" to="." method="_on_sign_up_button_down"]
[connection signal="pressed" from="SignUp" to="." method="_on_sign_up_pressed"]
[connection signal="button_down" from="LogIn" to="." method="_on_log_in_button_down"]
[connection signal="pressed" from="LogIn" to="." method="_on_log_in_pressed"]
[connection signal="button_down" from="LoginWindow/close" to="LoginWindow" method="_on_close_button_down"]
[connection signal="button_down" from="LoginWindow/Login" to="LoginWindow" method="_on_login_button_down"]
[connection signal="animation_finished" from="LoginWindow/Label/AnimationPlayer" to="LoginWindow" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="LoginWindow/Timer" to="LoginWindow" method="_on_timer_timeout"]
[connection signal="button_down" from="SignupWindow/close" to="SignupWindow" method="_on_close_button_down"]
[connection signal="button_down" from="SignupWindow/Login" to="SignupWindow" method="_on_login_button_down"]
[connection signal="animation_finished" from="SignupWindow/Label/AnimationPlayer" to="SignupWindow" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="SignupWindow/Timer" to="SignupWindow" method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
